--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,6 +16,7 @@
 
     = render 'shared/favicon'
   %body.h-full{ data: { locale: I18n.locale } }
+    = render partial: 'shared/loader'
     = render FlashMessageComponent.new( message: flash.first.nil? ? nil : flash.first[1], type: flash.first.nil? ? nil : flash.first[0], delay: 10000 )
     = render SidebarComponent.new(current_user: current_user) do
       = yield
