--- a/app/components/navbar_component.html.haml
+++ b/app/components/navbar_component.html.haml
@@ -1,9 +1,10 @@
 %div{data: {controller: 'navbar'}}
   %nav.mx-auto.flex.max-w-7xl.items-center.justify-between.gap-x-6.p-6{ class: 'lg:px-8', aria: {label:  "Global"} }
     .flex.lg:flex-1
-      %a{class: "-m-1.5 p-1.5", href: "#"}
-        %span.sr-only Your Company
-        = image_tag('castvault.png', class: 'w-auto')
+      %a{class: "-m-1.5 p-1.5", href: root_path}
+        %span.sr-only Castvault
+        = image_tag('castvault.png', class: 'w-32 lg:w-48')
+
     .hidden.lg:flex.lg:gap-x-12
       - @links.each do |link|
         %a.text-sm.font-semibold.leading-6.text-white{href: link[:url]}= link[:name]
@@ -22,8 +23,8 @@
     .fixed.inset-y-0.right-0.z-10.w-full.overflow-y-auto.bg-dark.px-6.py-6.sm:max-w-sm.sm:ring-1{class: "sm:ring-gray-900/10"}
       .flex.items-center.gap-x-6
         %a{class: "-m-1.5 p-1.5", href: "#"}
-          %span.sr-only Your Company
-          = image_tag('castvault.png', class: 'w-auto')
+          %span.sr-only Castvault
+          = image_tag('castvault.png', class: 'w-32 lg:w-48')
         %a.ml-auto.rounded-md.bg-indigo-600.px-3.py-2.text-sm.font-semibold.text-white.shadow-sm.hover:bg-indigo-500.focus-visible:outline.focus-visible:outline-2.focus-visible:outline-offset-2.focus-visible:outline-indigo-600{href: "#"} Sign up
         %button.rounded-md.text-white{class: "-m-2.5 p-2.5", type: "button", data: {action: 'navbar#toggleMobileMenu'}}
           %span.sr-only Close menu
@@ -33,7 +34,7 @@
         .-my-6.divide-y{class: "divide-gray-500/10"}
           .space-y-2.py-6
             - @links.each do |link|
-              %a.-mx-3.block.rounded-lg.px-3.py-2.text-base.font-semibold.leading-7.text-white.hover:bg-gray-50{href: link[:url], data: {action: 'navbar#toggleMobileMenu'}}= link[:name]
+              %a.-mx-3.block.rounded-lg.px-3.py-2.text-base.font-semibold.leading-7.text-white.hover:bg-gray-50.hover:text-dark{href: link[:url], data: {action: 'navbar#toggleMobileMenu'}}= link[:name]
           .py-6
             -#%a.-mx-3.block.rounded-lg.px-3.text-base.font-semibold.leading-7.text-white.hover:bg-gray-50{class: "py-2.5", href: "#", "data-turbo" => "false"} Log in
             %a.rounded-md.bg-indigo-600.px-3.py-2.text-sm.font-semibold.text-white.shadow-sm.hover:bg-indigo-500.focus-visible:outline.focus-visible:outline-2.focus-visible:outline-offset-2.focus-visible:outline-indigo-600{href: "/users/sign_in", "data-turbo" => "false"} Log in
