--- a/app/assets/stylesheets/castvault.css
+++ b/app/assets/stylesheets/castvault.css
@@ -2,6 +2,11 @@
     display: none !important;
 }
 
+.modal-content {
+    max-width: 95vw;
+    max-height: 95vh;
+}
+
 .modal-content::-webkit-scrollbar {
     width: 26px;
 }
