Possibility to invite clients to your platform. Missing all authorization stuff.

--- a/app/components/empty_state_component.html.haml
+++ b/app/components/empty_state_component.html.haml
@@ -1,4 +1,4 @@
-.text-center.rounded-xl.mt-8.p-8
+.text-center.rounded-xl.mt-8.p-8.bg-gray-700
   %i.mx-auto.h-12.w-12.text-secondary.text-6xl.bi{class: "bi-#{main_icon}"}
   %h3.mt-2.text-lg.font-semibold.text-primary
     = title
