--- a/app/components/navbar_component.html.haml
+++ b/app/components/navbar_component.html.haml
@@ -1,4 +1,4 @@
-%div{data: {controller: 'navbar'}}
+.sticky.top-0.z-50.bg-dark.bg-opacity-75{data: {controller: 'navbar'}}
   %nav.mx-auto.flex.max-w-7xl.items-center.justify-between.gap-x-6.p-6{ class: 'lg:px-8', aria: {label:  "Global"} }
     .flex.lg:flex-1
       %a{class: "-m-1.5 p-1.5", href: root_path}
