--- a/app/components/pricing_component.html.haml
+++ b/app/components/pricing_component.html.haml
@@ -78,7 +78,7 @@
 
 
 -else
-  %section#pricing.bg-slate-900.py-20.sm:py-32{"aria-label" => t('landing_pricing_component.pricing')}
+  %section#pricing.py-20.sm:py-32{"aria-label" => t('landing_pricing_component.pricing')}
     .mx-auto.max-w-7xl.px-4.sm:px-6.lg:px-8{data: {controller: 'periodicity-selector'} }
       .md:text-center
         %h2.font-display.text-3xl.tracking-tight.text-white.sm:text-4xl
