--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,5 @@
 .bg-dark
   %main
-    / Hero section
     .relative.isolate.overflow-hidden
       %svg.absolute.inset-0.-z-10.h-full.w-full{"aria-hidden" => "true", :class => "stroke-white/10 [mask-image:radial-gradient(100%_100%_at_top_right,white,transparent)]"}
         %defs
@@ -11,27 +10,23 @@
         %rect{:fill => "url(#983e3e4c-de6d-4c3f-8d64-b9761d1534cc)", :height => "100%", "stroke-width" => "0", :width => "100%"}
       .absolute.top-10.-z-10.transform-gpu.blur-3xl.lg:left-48{"aria-hidden" => "true", :class => "left-[calc(50%-4rem)] sm:left-[calc(50%-18rem)] lg:top-[calc(50%-30rem)] xl:left-[calc(50%-24rem)]"}
         .bg-gradient-to-r.opacity-20{:class => "aspect-[1108/632] w-[69.25rem] from-[#80caff] to-[#4f46e5]", :style => "clip-path: polygon(73.6% 51.7%, 91.7% 11.8%, 100% 46.4%, 97.4% 82.2%, 92.5% 84.9%, 75.7% 64%, 55.3% 47.5%, 46.5% 49.4%, 45% 62.9%, 50.3% 87.2%, 21.3% 64.1%, 0.1% 100%, 5.4% 51.1%, 21.4% 63.9%, 58.9% 0.2%, 73.6% 51.7%)"}
-      .mx-auto.max-w-7xl.px-6.pb-24.pt-10.sm:pb-40.lg:flex.lg:px-8.lg:pt-40
+      .mx-auto.max-w-7xl.px-6.pt-10.lg:flex.lg:px-8.lg:pt-40
         .mx-auto.max-w-2xl.flex-shrink-0.lg:mx-0.lg:max-w-xl.lg:pt-8
 
-          %h1.mt-10.text-4xl.font-bold.tracking-tight.text-white.sm:text-6xl Deploy to the cloud with confidence
-          %p.mt-6.text-lg.leading-8.text-gray-300 Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
+          %h1.mt-10.text-4xl.font-bold.tracking-tight.text-white.sm:text-6xl
+            = t('landing_page.simplify_talent_selection')
+          %p.mt-6.text-lg.leading-8.text-gray-300
+            = t('landing_page.description')
           .mt-10.flex.items-center.gap-x-6
-            %a.rounded-md.bg-indigo-500.text-sm.font-semibold.text-white.shadow-sm.hover:bg-indigo-400.focus-visible:outline.focus-visible:outline-2.focus-visible:outline-offset-2.focus-visible:outline-indigo-400{:class => "px-3.5 py-2.5", :href => "#"} Get started
+            = link_to t('landing_page.get_started'), root_path, class: 'btn-primary'
+
+
 
         .mx-auto.mt-16.flex.max-w-2xl.sm:mt-24.lg:ml-10.lg:mr-0.lg:mt-0.lg:max-w-none.lg:flex-none.xl:ml-32
           .max-w-3xl.flex-none.sm:max-w-5xl.lg:max-w-none
             %img.rounded-md.shadow-2xl.ring-1{:alt => "App screenshot", :class => "w-[76rem] bg-white/5 ring-white/10", :height => "1442", :src => "https://tailwindui.com/img/component-images/dark-project-app-screenshot.png", :width => "2432"}/
-    / Logo cloud
-    .mx-auto.mt-8.max-w-7xl.px-6.sm:mt-16.lg:px-8
-      %h2.text-center.text-lg.font-semibold.leading-8.text-white The world’s most innovative companies use our app
-      .mx-auto.mt-10.grid.max-w-lg.grid-cols-4.items-center.gap-x-8.gap-y-10.sm:max-w-xl.sm:grid-cols-6.sm:gap-x-10.lg:mx-0.lg:max-w-none.lg:grid-cols-5
-        %img.col-span-2.max-h-12.w-full.object-contain.lg:col-span-1{:alt => "Transistor", :height => "48", :src => "https://tailwindui.com/img/logos/158x48/transistor-logo-white.svg", :width => "158"}/
-        %img.col-span-2.max-h-12.w-full.object-contain.lg:col-span-1{:alt => "Reform", :height => "48", :src => "https://tailwindui.com/img/logos/158x48/reform-logo-white.svg", :width => "158"}/
-        %img.col-span-2.max-h-12.w-full.object-contain.lg:col-span-1{:alt => "Tuple", :height => "48", :src => "https://tailwindui.com/img/logos/158x48/tuple-logo-white.svg", :width => "158"}/
-        %img.col-span-2.max-h-12.w-full.object-contain.sm:col-start-2.lg:col-span-1{:alt => "SavvyCal", :height => "48", :src => "https://tailwindui.com/img/logos/158x48/savvycal-logo-white.svg", :width => "158"}/
-        %img.col-span-2.col-start-2.max-h-12.w-full.object-contain.sm:col-start-auto.lg:col-span-1{:alt => "Statamic", :height => "48", :src => "https://tailwindui.com/img/logos/158x48/statamic-logo-white.svg", :width => "158"}/
     / Feature section
+    #product
     .mx-auto.mt-32.max-w-7xl.px-6.sm:mt-56.lg:px-8
       .mx-auto.max-w-2xl.text-center
         %h2.text-base.font-semibold.leading-7.text-indigo-400 Deploy faster
@@ -76,6 +71,7 @@
                   Learn more
                   %span{"aria-hidden" => "true"} →
     / Feature section
+    #features
     .mt-32.sm:mt-56
       .mx-auto.max-w-7xl.px-6.lg:px-8
         .mx-auto.max-w-2xl.sm:text-center
@@ -167,6 +163,7 @@
           %a.text-sm.font-semibold.leading-6.text-white{:href => "#"}
             Learn more
             %span{"aria-hidden" => "true"} →
+  #pricing
   = render PricingComponent.new()
   / Footer
   %footer.relative{"aria-labelledby" => "footer-heading"}
