--- a/app/views/layouts/web.html.haml
+++ b/app/views/layouts/web.html.haml
@@ -10,7 +10,8 @@
     = javascript_include_tag "application", "data-turbo-track": "reload", type: "module"
 
     = render 'shared/favicon'
-  %body.h-full
+  %body
+    = render BackToTopComponent.new
     = render FlashMessageComponent.new( message: flash.first.nil? ? nil : flash.first[1], type: flash.first.nil? ? nil : flash.first[0], delay: 10000 )
     = render NavbarComponent.new()
     = yield
