--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -20,108 +20,78 @@
           .mt-10.flex.items-center.gap-x-6
             = link_to t('landing_page.get_started'), root_path, class: 'btn-primary'
 
-
-
         .mx-auto.mt-16.flex.max-w-2xl.sm:mt-24.lg:ml-10.lg:mr-0.lg:mt-0.lg:max-w-none.lg:flex-none.xl:ml-32
           .max-w-3xl.flex-none.sm:max-w-5xl.lg:max-w-none
-            %img.rounded-md.shadow-2xl.ring-1{:alt => "App screenshot", :class => "w-[76rem] bg-white/5 ring-white/10", :height => "1442", :src => "https://tailwindui.com/img/component-images/dark-project-app-screenshot.png", :width => "2432"}/
-    / Feature section
+            = image_tag("home/profiles-#{I18n.locale}.png", alt: "App screenshot", class: "rounded-md shadow-2xl ring-1 w-[76rem] bg-white/5 ring-white/10", height: "1442", width: "2432")
+
+    / Product section
     #product
     .mx-auto.mt-32.max-w-7xl.px-6.sm:mt-56.lg:px-8
       .mx-auto.max-w-2xl.text-center
-        %h2.text-base.font-semibold.leading-7.text-indigo-400 Deploy faster
-        %p.mt-2.text-3xl.font-bold.tracking-tight.text-white.sm:text-4xl Everything you need to deploy your app
-        %p.mt-6.text-lg.leading-8.text-gray-300 Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam voluptatum cupiditate veritatis in accusamus quisquam.
+        %h2.text-base.font-semibold.leading-7.text-indigo-400
+          = t('product_section.title')
+        %p.mt-2.text-3xl.font-bold.tracking-tight.text-white.sm:text-4xl
+          = t('product_section.subtitle')
+        %p.mt-6.text-lg.leading-8.text-gray-300
+          = t('product_section.description')
       .mx-auto.mt-16.max-w-2xl.sm:mt-20.lg:mt-24.lg:max-w-none
         %dl.grid.max-w-xl.grid-cols-1.gap-x-8.gap-y-16.lg:max-w-none.lg:grid-cols-3
           .flex.flex-col
             %dt.text-base.font-semibold.leading-7.text-white
               .mb-6.flex.h-10.w-10.items-center.justify-center.rounded-lg.bg-indigo-500
-                %svg.h-6.w-6.text-white{"aria-hidden" => "true", :fill => "none", :stroke => "currentColor", "stroke-width" => "1.5", :viewbox => "0 0 24 24"}
-                  %path{:d => "M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z", "stroke-linecap" => "round", "stroke-linejoin" => "round"}
-              Server monitoring
+                = render BootstrapIconWithTextComponent.new(icon: 'graph-up')
+              = t('product_section.analytics.title')
             %dd.mt-1.flex.flex-auto.flex-col.text-base.leading-7.text-gray-300
-              %p.flex-auto Non quo aperiam repellendus quas est est. Eos aut dolore aut ut sit nesciunt. Ex tempora quia. Sit nobis consequatur dolores incidunt.
-              %p.mt-6
-                %a.text-sm.font-semibold.leading-6.text-indigo-400{:href => "#"}
-                  Learn more
-                  %span{"aria-hidden" => "true"} →
+              %p.flex-auto
+                = t('product_section.analytics.description')
           .flex.flex-col
             %dt.text-base.font-semibold.leading-7.text-white
               .mb-6.flex.h-10.w-10.items-center.justify-center.rounded-lg.bg-indigo-500
-                %svg.h-6.w-6.text-white{"aria-hidden" => "true", :fill => "none", :stroke => "currentColor", "stroke-width" => "1.5", :viewbox => "0 0 24 24"}
-                  %path{:d => "M15 19.128a9.38 9.38 0 002.625.372 9.337 9.337 0 004.121-.952 4.125 4.125 0 00-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 018.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0111.964-3.07M12 6.375a3.375 3.375 0 11-6.75 0 3.375 3.375 0 016.75 0zm8.25 2.25a2.625 2.625 0 11-5.25 0 2.625 2.625 0 015.25 0z", "stroke-linecap" => "round", "stroke-linejoin" => "round"}
-              Collaborate
+                = render BootstrapIconWithTextComponent.new(icon: 'sliders')
+              = t('product_section.customizable.title')
             %dd.mt-1.flex.flex-auto.flex-col.text-base.leading-7.text-gray-300
-              %p.flex-auto Vero eum voluptatem aliquid nostrum voluptatem. Vitae esse natus. Earum nihil deserunt eos quasi cupiditate. A inventore et molestiae natus.
-              %p.mt-6
-                %a.text-sm.font-semibold.leading-6.text-indigo-400{:href => "#"}
-                  Learn more
-                  %span{"aria-hidden" => "true"} →
+              %p.flex-auto
+                = t('product_section.customizable.description')
           .flex.flex-col
             %dt.text-base.font-semibold.leading-7.text-white
               .mb-6.flex.h-10.w-10.items-center.justify-center.rounded-lg.bg-indigo-500
-                %svg.h-6.w-6.text-white{"aria-hidden" => "true", :fill => "none", :stroke => "currentColor", "stroke-width" => "1.5", :viewbox => "0 0 24 24"}
-                  %path{:d => "M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5m-9-6h.008v.008H12v-.008zM12 15h.008v.008H12V15zm0 2.25h.008v.008H12v-.008zM9.75 15h.008v.008H9.75V15zm0 2.25h.008v.008H9.75v-.008zM7.5 15h.008v.008H7.5V15zm0 2.25h.008v.008H7.5v-.008zm6.75-4.5h.008v.008h-.008v-.008zm0 2.25h.008v.008h-.008V15zm0 2.25h.008v.008h-.008v-.008zm2.25-4.5h.008v.008H16.5v-.008zm0 2.25h.008v.008H16.5V15z", "stroke-linecap" => "round", "stroke-linejoin" => "round"}
-              Task scheduling
+                = render BootstrapIconWithTextComponent.new(icon: 'share')
+              = t('product_section.shareable.title')
+
             %dd.mt-1.flex.flex-auto.flex-col.text-base.leading-7.text-gray-300
-              %p.flex-auto Et quod quaerat dolorem quaerat architecto aliquam accusantium. Ex adipisci et doloremque autem quia quam. Quis eos molestiae at iure impedit.
-              %p.mt-6
-                %a.text-sm.font-semibold.leading-6.text-indigo-400{:href => "#"}
-                  Learn more
-                  %span{"aria-hidden" => "true"} →
+              %p.flex-auto
+                = t('product_section.shareable.description')
+
     / Feature section
     #features
-    .mt-32.sm:mt-56
-      .mx-auto.max-w-7xl.px-6.lg:px-8
-        .mx-auto.max-w-2xl.sm:text-center
-          %h2.text-base.font-semibold.leading-7.text-indigo-400 Everything you need
-          %p.mt-2.text-3xl.font-bold.tracking-tight.text-white.sm:text-4xl No server? No problem.
-          %p.mt-6.text-lg.leading-8.text-gray-300 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis.
+      .mt-32.sm:mt-56
+        .mx-auto.max-w-7xl.px-6.lg:px-8
+          .mx-auto.max-w-2xl.sm:text-center
+            %h2.text-base.font-semibold.leading-7.text-indigo-400
+              = t('features_section.title')
+            %p.mt-2.text-3xl.font-bold.tracking-tight.text-white.sm:text-4xl
+              = t('features_section.subtitle')
+            %p.mt-6.text-lg.leading-8.text-gray-300
+              = t('features_section.description')
+
       .relative.overflow-hidden.pt-16
         .mx-auto.max-w-7xl.px-6.lg:px-8
-          %img.rounded-xl.shadow-2xl.ring-1{:alt => "App screenshot", :class => "mb-[-12%] ring-white/10", :height => "1442", :src => "https://tailwindui.com/img/component-images/dark-project-app-screenshot.png", :width => "2432"}/
+          = image_tag("home/forms-#{I18n.locale}.png", alt: "App screenshot", class: "rounded-xl shadow-2xl ring-1 mb-[-12%] ring-white/10", height: "1442", width: "2432")
           .relative{"aria-hidden" => "true"}
             .absolute.-inset-x-20.bottom-0.bg-gradient-to-t.from-gray-900{:class => "pt-[7%]"}
       .mx-auto.mt-16.max-w-7xl.px-6.sm:mt-20.md:mt-24.lg:px-8
         %dl.mx-auto.grid.max-w-2xl.grid-cols-1.gap-x-6.gap-y-10.text-base.leading-7.text-gray-300.sm:grid-cols-2.lg:mx-0.lg:max-w-none.lg:grid-cols-3.lg:gap-x-8.lg:gap-y-16
-          .relative.pl-9
-            %dt.inline.font-semibold.text-white
-              %svg.absolute.left-1.top-1.h-5.w-5.text-indigo-500{"aria-hidden" => "true", :fill => "currentColor", :viewbox => "0 0 20 20"}
-                %path{"clip-rule" => "evenodd", :d => "M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z", "fill-rule" => "evenodd"}
-              Push to deploy.
-            %dd.inline Lorem ipsum, dolor sit amet consectetur adipisicing elit aute id magna.
-          .relative.pl-9
-            %dt.inline.font-semibold.text-white
-              %svg.absolute.left-1.top-1.h-5.w-5.text-indigo-500{"aria-hidden" => "true", :fill => "currentColor", :viewbox => "0 0 20 20"}
-                %path{"clip-rule" => "evenodd", :d => "M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z", "fill-rule" => "evenodd"}
-              SSL certificates.
-            %dd.inline Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.
-          .relative.pl-9
-            %dt.inline.font-semibold.text-white
-              %svg.absolute.left-1.top-1.h-5.w-5.text-indigo-500{"aria-hidden" => "true", :fill => "currentColor", :viewbox => "0 0 20 20"}
-                %path{"clip-rule" => "evenodd", :d => "M15.312 11.424a5.5 5.5 0 01-9.201 2.466l-.312-.311h2.433a.75.75 0 000-1.5H3.989a.75.75 0 00-.75.75v4.242a.75.75 0 001.5 0v-2.43l.31.31a7 7 0 0011.712-3.138.75.75 0 00-1.449-.39zm1.23-3.723a.75.75 0 00.219-.53V2.929a.75.75 0 00-1.5 0V5.36l-.31-.31A7 7 0 003.239 8.188a.75.75 0 101.448.389A5.5 5.5 0 0113.89 6.11l.311.31h-2.432a.75.75 0 000 1.5h4.243a.75.75 0 00.53-.219z", "fill-rule" => "evenodd"}
-              Simple queues.
-            %dd.inline Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus.
-          .relative.pl-9
-            %dt.inline.font-semibold.text-white
-              %svg.absolute.left-1.top-1.h-5.w-5.text-indigo-500{"aria-hidden" => "true", :fill => "currentColor", :viewbox => "0 0 20 20"}
-                %path{"clip-rule" => "evenodd", :d => "M10 2.5c-1.31 0-2.526.386-3.546 1.051a.75.75 0 01-.82-1.256A8 8 0 0118 9a22.47 22.47 0 01-1.228 7.351.75.75 0 11-1.417-.49A20.97 20.97 0 0016.5 9 6.5 6.5 0 0010 2.5zM4.333 4.416a.75.75 0 01.218 1.038A6.466 6.466 0 003.5 9a7.966 7.966 0 01-1.293 4.362.75.75 0 01-1.257-.819A6.466 6.466 0 002 9c0-1.61.476-3.11 1.295-4.365a.75.75 0 011.038-.219zM10 6.12a3 3 0 00-3.001 3.041 11.455 11.455 0 01-2.697 7.24.75.75 0 01-1.148-.965A9.957 9.957 0 005.5 9c0-.028.002-.055.004-.082a4.5 4.5 0 018.996.084V9.15l-.005.297a.75.75 0 11-1.5-.034c.003-.11.004-.219.005-.328a3 3 0 00-3-2.965zm0 2.13a.75.75 0 01.75.75c0 3.51-1.187 6.745-3.181 9.323a.75.75 0 11-1.186-.918A13.687 13.687 0 009.25 9a.75.75 0 01.75-.75zm3.529 3.698a.75.75 0 01.584.885 18.883 18.883 0 01-2.257 5.84.75.75 0 11-1.29-.764 17.386 17.386 0 002.078-5.377.75.75 0 01.885-.584z", "fill-rule" => "evenodd"}
-              Advanced security.
-            %dd.inline Lorem ipsum, dolor sit amet consectetur adipisicing elit aute id magna.
-          .relative.pl-9
-            %dt.inline.font-semibold.text-white
-              %svg.absolute.left-1.top-1.h-5.w-5.text-indigo-500{"aria-hidden" => "true", :fill => "currentColor", :viewbox => "0 0 20 20"}
-                %path{"clip-rule" => "evenodd", :d => "M7.84 1.804A1 1 0 018.82 1h2.36a1 1 0 01.98.804l.331 1.652a6.993 6.993 0 011.929 1.115l1.598-.54a1 1 0 011.186.447l1.18 2.044a1 1 0 01-.205 1.251l-1.267 1.113a7.047 7.047 0 010 2.228l1.267 1.113a1 1 0 01.206 1.25l-1.18 2.045a1 1 0 01-1.187.447l-1.598-.54a6.993 6.993 0 01-1.929 1.115l-.33 1.652a1 1 0 01-.98.804H8.82a1 1 0 01-.98-.804l-.331-1.652a6.993 6.993 0 01-1.929-1.115l-1.598.54a1 1 0 01-1.186-.447l-1.18-2.044a1 1 0 01.205-1.251l1.267-1.114a7.05 7.05 0 010-2.227L1.821 7.773a1 1 0 01-.206-1.25l1.18-2.045a1 1 0 011.187-.447l1.598.54A6.993 6.993 0 017.51 3.456l.33-1.652zM10 13a3 3 0 100-6 3 3 0 000 6z", "fill-rule" => "evenodd"}
-              Powerful API.
-            %dd.inline Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.
-          .relative.pl-9
-            %dt.inline.font-semibold.text-white
-              %svg.absolute.left-1.top-1.h-5.w-5.text-indigo-500{"aria-hidden" => "true", :fill => "currentColor", :viewbox => "0 0 20 20"}
-                %path{:d => "M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z"}
-                %path{"clip-rule" => "evenodd", :d => "M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z", "fill-rule" => "evenodd"}
-              Database backups.
-            %dd.inline Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus.
+          - %w[customization media_uploads diversity_options accessibility dynamic_fields profile_management].each do |feature|
+            %dt.inline.text-white.flex
+              %i{class: "bi #{@feature_icons[feature]} text-xl fill-current text-primary w-5 h-5 mr-3"}
+              %div
+                %span.font-semibold= t("features.#{feature}")
+                = t("features.#{feature}_description")
+
+
+
+
+
     / Stats
     .mx-auto.mt-32.max-w-7xl.px-6.sm:mt-56.lg:px-8
       .mx-auto.max-w-2xl.lg:mx-0.lg:max-w-xl
